# Yandex_contest

./: .gitignore  CMakeLists.txt  Difficult_numbes.cpp  Dividing_a_number.cpp  Game.cpp  GameWithNumbers.cpp  Interesting_travel.cpp  MaximumDamage.cpp  NestedRectangles.cpp  README.md  Tournament_table.cpp  WalletsAndCoins.cpp
Difficult_numbes/: CMakeLists.txt  main.cpp
Game/: CMakeLists.txt  main.cpp
Interesting_travel/: CMakeLists.txt  main.cpp
Number_division/: CMakeLists.txt  main.cpp
TheBestApproximation/: TheBestApproximation.cpp
Tournament_table/: CMakeLists.txt
Wallets_and_coins/: CMakeLists.txt  main.cpp
l10n/: CMakeLists.txt  main.cpp
